--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ShapeActivity">
+        <activity android:name=".ShapeActivity"
+            android:label="@string/bcoder_com">
         </activity>
         <activity
             android:name=".RoundRectBtnActivity"
